tests/semantic/valid/06_function_signatures.tc
// 测试6: 函数声明（不进入函数体）
// 目标：验证可以声明多个函数，函数名不重定义
// 注意：Day 2不处理函数体，只收集签名

int f(int x);
int g(int y);
int h(void);

// main函数必须存在
int main(void) {
    return 0;
}
