tests/semantic/invalid/11_void_call_expr.tc
// 非法测试11: void函数作为表达式调用
// 目标：应报错 SEM_VOID_FUNC_CALL_EXPR
void print_hello() {
    // do nothing
}

int main(void) {
    int x = print_hello();  // void不能用作表达式
    return x;
}
